k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: bookstore
  labels:
    name: bookstore
