k8s/bookstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore
  namespace: bookstore
  labels:
    app: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: bookstore
      labels:
        app: bookstore
    spec:
      containers:
        - name: bookstore
          image: ivangudak096/bookstore-webapp-x64:latest
          ports:
            - containerPort: 4200
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-svc
  namespace: bookstore
spec:
  selector:
    app: bookstore
  type: LoadBalancer
  ports:
    - port: 90
      protocol: TCP
      targetPort: 4200
#      nodePort: 30000
