k8s/carts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: bookstore
  labels:
    app: carts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: bookstore
      labels:
        app: carts
        app.kubernetes.io/version: 1.9.0
        app.kubernetes.io/part-of: BookStore
    spec:
      containers:
        - name: carts
          image: ghcr.io/ihudak/carts-{AGENT}:{FLAVOR}
          ports:
            - containerPort: 8080
            - containerPort: 5005
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 95
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 400m
              memory: 768Mi
            requests:
              cpu: 400m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: carts-svc
  namespace: bookstore
spec:
  selector:
    app: carts
  type: LoadBalancer # ClusterIP
  ports:
    - name: http
      port: 83
      protocol: TCP
      targetPort: 8080
      nodePort: 30003 # comment if ClusterIP
    - name: debug
      port: 5003
      protocol: TCP
      targetPort: 5005
      nodePort: 32003 # comment if ClusterIP
