k8s/clients.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients
  namespace: bookstore
  labels:
    app: clients
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clients
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: bookstore
      labels:
        app: clients
        app.kubernetes.io/version: 1.9.0
        app.kubernetes.io/part-of: BookStore
    spec:
      containers:
        - name: clients
          image: ghcr.io/ihudak/clients-{AGENT}:{FLAVOR}
          ports:
            - containerPort: 8080
            - containerPort: 5005
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 95
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 450m
              memory: 768Mi
            requests:
              cpu: 450m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: clients-svc
  namespace: bookstore
spec:
  selector:
    app: clients
  type: LoadBalancer # ClusterIP
  ports:
    - name: http
      port: 81
      protocol: TCP
      targetPort: 8080
      nodePort: 30001 # comment if ClusterIP
    - name: debug
      port: 5001
      protocol: TCP
      targetPort: 5005
      nodePort: 32001 # comment if ClusterIP
