k8s/databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: bookstore
  labels:
    app: mysql
spec:
  replicas:  1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: bookstore
      labels:
        app: mysql
        app.kubernetes.io/version: 1.9.0
        app.kubernetes.io/part-of: BookStore
    spec:
      containers:
        - name: mysql
          image: ghcr.io/ihudak/dt-mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: bookstore
spec:
  selector:
    app: mysql
  type: LoadBalancer # ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
      nodePort: 31306 # comment if ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: bookstore
  labels:
    app: postgres
spec:
  replicas:  1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: bookstore
      labels:
        app: postgres
        app.kubernetes.io/version: 1.9.0
        app.kubernetes.io/part-of: BookStore
    spec:
      containers:
        - name: postgres
          image: ghcr.io/ihudak/dt-postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: bookstore
spec:
  selector:
    app: postgres
  type: LoadBalancer # ClusterIP
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 31432 # comment if ClusterIP
