k8s/dynapay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynapay
  namespace: bookstore
  labels:
    app: dynapay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynapay
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: bookstore
      labels:
        app: dynapay
        app.kubernetes.io/version: 1.9.0
        app.kubernetes.io/part-of: BookStore
    spec:
      containers:
        - name: dynapay
          image: ghcr.io/ihudak/dynapay-{AGENT}:{FLAVOR}
          ports:
            - containerPort: 8080
            - containerPort: 5005
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 95
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 400m
              memory: 768Mi
            requests:
              cpu: 400m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dynapay-svc
  namespace: bookstore
spec:
  selector:
    app: dynapay
  type: LoadBalancer # ClusterIP
  ports:
    - name: http
      port: 87
      protocol: TCP
      targetPort: 8080
      nodePort: 30007 # comment if ClusterIP
    - name: debug
      port: 5007
      protocol: TCP
      targetPort: 5005
      nodePort: 32007 # comment if ClusterIP
