k8s/ingest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest
  namespace: bookstore
  labels:
    app: ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingest
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: bookstore
      labels:
        app: ingest
        app.kubernetes.io/version: 1.8.8
        app.kubernetes.io/part-of: BookStore
    spec:
      containers:
        - name: ingest
          image: ghcr.io/ihudak/ingest-{AGENT}:{FLAVOR}
          ports:
            - containerPort: 8080
            - containerPort: 5005
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 95
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 768Mi
            requests:
              cpu: 500m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ingest-svc
  namespace: bookstore
spec:
  selector:
    app: ingest
  type: LoadBalancer # ClusterIP
  ports:
    - name: http
      port: 89
      protocol: TCP
      targetPort: 8080
      nodePort: 30009 # comment if ClusterIP
    - name: debug
      port: 5009
      protocol: TCP
      targetPort: 5005
      nodePort: 32009 # comment if ClusterIP
