k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: bookstore
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      namespace: bookstore
      labels:
        app: orders
        app.kubernetes.io/version: 1.9.0
        app.kubernetes.io/part-of: BookStore
    spec:
      containers:
        - name: orders
          image: ghcr.io/ihudak/orders-{AGENT}:{FLAVOR}
          ports:
            - containerPort: 8080
            - containerPort: 5005
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 95
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 550m
              memory: 1Gi
            requests:
              cpu: 550m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: bookstore
spec:
  selector:
    app: orders
  type: LoadBalancer # ClusterIP
  ports:
    - name: http
      port: 85
      protocol: TCP
      targetPort: 8080
      nodePort: 30005 # comment if ClusterIP
    - name: debug
      port: 5005
      protocol: TCP
      targetPort: 5005
      nodePort: 32005 # comment if ClusterIP
