k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: bookstore
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: bookstore-arm.germanywestcentral.cloudapp.azure.com
      http:
        paths:
          - path: /api/ingest/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingest-svc
                port:
                  number: 89
          - path: /api/clients/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: clients-svc
                port:
                  number: 81
          - path: /api/books/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: books-svc
                port:
                  number: 82
          - path: /api/carts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: carts-svc
                port:
                  number: 83
          - path: /api/storage/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-svc
                port:
                  number: 84
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-svc
                port:
                  number: 85
          - path: /api/ratings/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ratings-svc
                port:
                  number: 88
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-svc
                port:
                  number: 86
          - path: /api/superpay/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: superpay-svc
                port:
                  number: 87
          - path: /api/dynapay/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: superpay-svc
                port:
                  number: 87
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-svc
                port:
                  number: 90
